--- a/src/styles/BookItems.css
+++ b/src/styles/BookItems.css
@@ -2,10 +2,178 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  margin: 2.313rem 0;
+  padding: 2rem 1.688rem 1.625rem 1.688rem;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background: #fff;
+  width: 60rem;
 }
 
 .titleBtns {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  width: 40%;
+}
+
+.categoryItem {
+  display: flex;
+  align-items: flex-start;
+  font-size: 0.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+  opacity: 0.5;
+}
+
+.titleItem {
+  font-size: 1.375rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.2px;
+  color: #121212;
+  text-align: left;
+}
+
+.authorItem {
+  font-size: 0.875rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #4386bf;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.btnContainer {
+  margin-top: 15px;
+  display: flex;
+  justify-content: start;
+  width: 100%;
+}
+
+button {
+  width: 3.375rem;
+  height: 1.188rem;
+  margin: 0.188rem 0.938rem 0.125rem 0;
+  font-size: 0.875rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #0290ff;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.bordered {
+  padding: 0 3px;
+  border-right: solid 1px #e8e8e8;
+  border-left: solid 1px #e8e8e8;
+}
+
+.statusContainer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.circle {
+  width: 2.625rem;
+  height: 2.62rem;
+  padding: 0.62rem 0.625rem;
+  color: #0290ff;
+}
+
+.percentage {
+  width: 4.25rem;
+  height: 2.438rem;
+  margin: 0.063rem 5.75rem 0 0.688rem;
+  font-size: 2rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+}
+
+.completed {
+  width: 5rem;
+  height: 1.125rem;
+  opacity: 0.5;
+  font-size: 0.875rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+}
+
+.currentChapter {
+  height: 1.125rem;
+  margin: 0.063rem 3.625rem 0 0;
+  opacity: 0.5;
+  font-size: 0.813rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+}
+
+.lessonChapter {
+  height: 1.313rem;
+  margin: 0.438rem 6.813rem 0.25rem 3.688rem;
+  font-size: 1rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.4px;
+  color: #121212;
+}
+
+.progressBtn {
+  cursor: pointer;
+  width: 11.5rem;
+  height: 2.063rem;
+  margin: 0.75rem 0 0.563rem 0;
+  padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+  background-color: #0290ff;
+  border-radius: 3px;
+  border: none;
+  color: #fff;
+}
+
+.chapterContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.formListContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+  padding: 3rem 0 10rem 0;
+}
+
+.bookItemTitle {
+  width: 100%;
 }
